[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bokeh_customizations"
version = "0.1.0"
description = "Clean Bokeh extensions for keyboard shortcuts and other UI enhancements."
authors = [
    {name = "Leonard Kappler", email = "leokapp44@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh===3.6.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bokeh_customizations" = ["js/*.js", "js/*.js.map"]
